# python-IaC-practice

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  skills-lock.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: 01_spec_definition.md  02_implementation.md  03_bug_report.md
.github/workflows/: cd.yml  ci.yml  deploy.yml
app/: config.py  main.py
app/alembic/: env.py
app/api/: auth.py  tasks.py
app/crud/: task.py  user.py
app/dependencies/: auth.py
app/models/: task.py  user.py
app/schemas/: task.py  user.py
app/services/: auth.py  task_explainer.py
app/tests/: conftest.py  test_api_auth.py  test_api_explain.py  test_api_tasks.py  test_auth_service.py  test_health.py  test_schemas.py  test_task_explainer.py
docs/: INDEX.md  POLICY.md  docs-and-testing-policy.md
docs/decisions/: 2026-03-12-api-client.md  2026-03-12-auth-strategy.md  2026-03-12-cd-pipeline.md  2026-03-12-ci-pipeline-setup.md  2026-03-12-crud-api-implementation.md  2026-03-12-db-models-and-alembic.md  2026-03-12-deploy-workflow.md  2026-03-12-ecr-iam-oidc.md  2026-03-12-ecs-alb-module.md  2026-03-12-explain-ui.md  2026-03-12-fastapi-async-architecture.md  2026-03-12-fastapi-openai-endpoint.md  2026-03-12-frontend-test-foundation.md  2026-03-12-local-dev-environment.md  2026-03-12-nextjs-initial-setup.md  2026-03-12-openai-api-integration.md  2026-03-12-openai-test-mock.md  2026-03-12-rds-secrets-manager.md  2026-03-12-tailwind-css-setup.md  (+5 more)
frontend/: .gitignore  package-lock.json  package.json
(+53 files in other folders)
